results/SpecGenBench/2-shot/log-SolveQuadraticEquation-2023_11_28_03_11_00.txt
import java.lang.Math;

public class SolveQuadraticEquation {
    //@ requires a != 0;
    //@ ensures \result.length == 2;
    //@ ensures delta >= 0 ==> \result[0] == (-b - Math.sqrt(delta)) / (2 * a);
    //@ ensures delta >= 0 ==> \result[1] == 0;
    //@ ensures delta < 0 ==> \result[0] == -b / (2*a);
    //@ ensures delta < 0 ==> \result[1] == Math.sqrt(-delta) / (2*a);
    public static double[] solve(int a, int b, int c) {
        double[] res = new double[2][2];
        double delta = b * b - 4 * a * c;
        if(delta >= 0) {
            res[0] = (-b - Math.sqrt(delta)) / (2 * a);
            res[1] = 0;
        }
        else {
            res[0] = -b / (2*a);
            res[1] = Math.sqrt(-delta) / (2*a);
        }
        return res;
    } 
}
/home/max/Documents/JMLGPT/tmp/SolveQuadraticEquation.java:6: error: cannot find symbol
    //@ ensures delta >= 0 ==> \result[0] == (-b - Math.sqrt(delta)) / (2 * a);
                ^
  symbol:   variable delta
  location: class SolveQuadraticEquation
/home/max/Documents/JMLGPT/tmp/SolveQuadraticEquation.java:6: error: cannot find symbol
    //@ ensures delta >= 0 ==> \result[0] == (-b - Math.sqrt(delta)) / (2 * a);
                                                             ^
  symbol:   variable delta
  location: class SolveQuadraticEquation
/home/max/Documents/JMLGPT/tmp/SolveQuadraticEquation.java:7: error: cannot find symbol
    //@ ensures delta >= 0 ==> \result[1] == 0;
                ^
  symbol:   variable delta
  location: class SolveQuadraticEquation
/home/max/Documents/JMLGPT/tmp/SolveQuadraticEquation.java:8: error: cannot find symbol
    //@ ensures delta < 0 ==> \result[0] == -b / (2*a);
                ^
  symbol:   variable delta
  location: class SolveQuadraticEquation
/home/max/Documents/JMLGPT/tmp/SolveQuadraticEquation.java:9: error: cannot find symbol
    //@ ensures delta < 0 ==> \result[1] == Math.sqrt(-delta) / (2*a);
                ^
  symbol:   variable delta
  location: class SolveQuadraticEquation
/home/max/Documents/JMLGPT/tmp/SolveQuadraticEquation.java:9: error: cannot find symbol
    //@ ensures delta < 0 ==> \result[1] == Math.sqrt(-delta) / (2*a);
                                                       ^
  symbol:   variable delta
  location: class SolveQuadraticEquation
/home/max/Documents/JMLGPT/tmp/SolveQuadraticEquation.java:11: error: incompatible types: double[][] cannot be converted to double[]
        double[] res = new double[2][2];
                       ^
7 errors

